src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Consumer</fullName>
        <description>Consumer opportunity sales process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Business Proposal</fullName>
        </values>
        <values>
            <fullName>Closed%2FLost</fullName>
        </values>
        <values>
            <fullName>Closed%2FWon</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Validate</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Valspar Master Sales Process</fullName>
        <description>Master sales process for Valspar</description>
        <isActive>true</isActive>
        <values>
            <fullName>Business Proposal</fullName>
        </values>
        <values>
            <fullName>Closed%2FLost</fullName>
        </values>
        <values>
            <fullName>Closed%2FWon</fullName>
        </values>
        <values>
            <fullName>Develop</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Validate</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Actual_CFY_New_Bus__c</fullName>
        <description>Actual current fiscal year new business</description>
        <inlineHelpText>Actual current fiscal year billed revenue for this opportunity that was
closed in the current fiscal year.</inlineHelpText>
        <label>Actual CFY New Bus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Carry_Over_New_Bus__c</fullName>
        <inlineHelpText>Actual current fiscal year billed revenue for this opportunity that was
closed in the previous fiscal year.</inlineHelpText>
        <label>Actual Carry Over New Bus</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Additional_Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for accounts that have a relationship to the existing account record but are not a parent.</description>
        <label>Additional Related Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Related Account</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_Expected_Revenue__c</fullName>
        <inlineHelpText>&quot;Enter amount of expected yearly revenue in the currency this Opportunity will be billed.&quot;</inlineHelpText>
        <label>Annual Expected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Gallons__c</fullName>
        <description>This is field that is currently on the GI on demand opportunity page.</description>
        <label>Annual Gallons</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Probability_Based_Revenue__c</fullName>
        <description>Annual Expected Revenue * Probability * Exchange Rate The field will automatically update when the Probability field is updated.  The field value CANNOT be overidden by an end user as it&apos;s a calculated field.</description>
        <formula>Annual_Expected_Revenue__c   *  Probability</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Annual Expected Revenue * Probability * Exchange Rate</inlineHelpText>
        <label>Annual Probability Based Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Application_Technology__c</fullName>
        <description>What Application Technology are you using?</description>
        <inlineHelpText>Indicate which application technology you are using for this opportunity.</inlineHelpText>
        <label>Application Technology</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>test 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>test 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXTRUSION</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to trigger an email to the manager for approval that the opportunity is valid to utilize lab resources.</description>
        <label>Approval Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approved_By2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is located in the Develop stage on the Opportunity page layout. We have 2 approved by fields as we also have an approved by field in the qualification stage.</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Managers Name in this field is accountable for stating this opportunity is valid to use additional resources, ie: Lab.</description>
        <label>Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <description>This field autopopulates base on the date the manager populates the approved by field. This field cannot be changed after the intial date is added.</description>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_to_Sell_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is on the GI Opportunity page layout and is only visible to those within a GI Role.</description>
        <label>Approved to Sell By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Business Owner responsible for the revenue within this market segment of the BU.</description>
        <label>Business Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>This field is autopopulated by a trigger that looks at the user record of the creator of the record and or the current assigned owner and uses their BU for reporting purposes.</description>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Aerosol</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Automotive</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>Coil/Extrusion</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer DB</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer PD</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>EPS</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>General Industrial</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>Wood</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>Mirror</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>3D Laser Sintering</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Arts</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Plastikote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer B&amp;Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Wattyl Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Ace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Lowes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carry_Over_New_Business_Revenue__c</fullName>
        <label>Carry Over New Business Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Year_Full_Revenue__c</fullName>
        <formula>Annual_Expected_Revenue__c * ( 
if (TEXT(Global_Region__c) = &quot;North America&quot;, 
Fiscal_Period__r.Fiscal_Year__r.North_America_End_Date__c, 
Fiscal_Period__r.Fiscal_Year__r.Global_End_Date__c) 
- CloseDate) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Year Full Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Close_Year_Revenue__c</fullName>
        <formula>Annual_Probability_Based_Revenue__c  * (
             if (TEXT(Global_Region__c) = &quot;North America&quot;,
                          Fiscal_Period__r.Fiscal_Year__r.North_America_End_Date__c,
                          Fiscal_Period__r.Fiscal_Year__r.Global_End_Date__c)
- CloseDate) / 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Year Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed_In_Current_FY__c</fullName>
        <formula>if (TEXT(Global_Region__c)  = &quot;North America&quot;,
                if (Fiscal_Period__r.Fiscal_Year__r.North_America_Start_Date__c &lt;=  TODAY() &amp;&amp; TODAY() &lt;= Fiscal_Period__r.Fiscal_Year__r.North_America_End_Date__c, 1, 0),
                if (Fiscal_Period__r.Fiscal_Year__r.Global_Start_Date__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= Fiscal_Period__r.Fiscal_Year__r.Global_End_Date__c, 1, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed In Current FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_In_Next_FY__c</fullName>
        <formula>if (TEXT(Global_Region__c)  = &quot;North America&quot;,
                if (Fiscal_Period__r.Fiscal_Year__r.Prior_Fiscal_Year__r.North_America_Start_Date__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= Fiscal_Period__r.Fiscal_Year__r.Prior_Fiscal_Year__r.North_America_End_Date__c, 1, 0),
                if (Fiscal_Period__r.Fiscal_Year__r.Prior_Fiscal_Year__r.Global_Start_Date__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= Fiscal_Period__r.Fiscal_Year__r.Prior_Fiscal_Year__r.Global_End_Date__c, 1, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed In Next FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_In_Prior_FY__c</fullName>
        <formula>if (TEXT(Global_Region__c)  = &quot;North America&quot;,
                if (Fiscal_Period__r.Fiscal_Year__r.Next_Fiscal_Year__r.North_America_Start_Date__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= Fiscal_Period__r.Fiscal_Year__r.Next_Fiscal_Year__r.North_America_End_Date__c, 1, 0),
                if (Fiscal_Period__r.Fiscal_Year__r.Next_Fiscal_Year__r.Global_Start_Date__c &lt;= TODAY() &amp;&amp; TODAY() &lt;= Fiscal_Period__r.Fiscal_Year__r.Next_Fiscal_Year__r.Global_End_Date__c, 1, 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed In Prior FY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competition_Identified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gather customer&apos;s requirements</description>
        <inlineHelpText>Use this to indicate whether or not you have identified the competition.</inlineHelpText>
        <label>Competition Identified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConstructionPts__CP_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CP Project</label>
        <referenceTo>ConstructionPts__CP_Project__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Worthy__c</fullName>
        <description>Check box to indicate if the opportunity is credit worthy.</description>
        <inlineHelpText>Check box to indicate if the opportunity is credit worthy.</inlineHelpText>
        <label>Credit Worthy</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D &amp; B Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D &amp; B Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11i Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_FY_Full_Revenue__c</fullName>
        <formula>if (Current_FY_Revenue_Override__c &lt;&gt; 0,
Current_FY_Revenue_Override__c,
if (Closed_In_Prior_FY__c = 1,
Annual_Expected_Revenue__c - Prior_FY_Full_Revenue__c ,
if (Closed_In_Current_FY__c = 1,
Close_Year_Full_Revenue__c,
0)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current FY Full Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Revenue_Override__c</fullName>
        <description>(Optional) Enter value in opportunity currency ONLY if you don&apos;t agree with Current FY Revenue calculated value.
This value will override the formula for Current FY Revenue when it is not null.</description>
        <inlineHelpText>OPTIONAL: Update this field in the Opportunity Currency ONLY if there is
a business reason for overriding the calculation for Current FY Revenue</inlineHelpText>
        <label>Current FY Revenue Override</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_FY_Revenue__c</fullName>
        <description>If the Close Date is greater than the Fiscal Year End Date, then the value will be 0. If the close date is greater than the Fiscal Year End Date, calculate the Full Year Fiscal Year Probability Based Revenue * (the Current Fiscal Year End Date - Close Date)/ 365. If the value is zero, it will display as 0 versus a blank field. This field will autoupdate as the close date changes. This field CANNOT be manually updated by a user as it&apos;s a calculated field.</description>
        <formula>if (Current_FY_Revenue_Override__c &lt;&gt; 0 &amp;&amp; !ISPICKVAL(Job_Type__c,&apos;One-Time&apos;),
        Current_FY_Revenue_Override__c,
        if (Closed_In_Prior_FY__c = 1 &amp;&amp; !ISPICKVAL(Job_Type__c,&apos;One-Time&apos;),
                      Annual_Probability_Based_Revenue__c -  Prior_FY_Revenue__c ,
                      if (Closed_In_Current_FY__c = 1 &amp;&amp; !ISPICKVAL(Job_Type__c,&apos;One-Time&apos;),
                           Close_Year_Revenue__c,
                           0)
          )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If Opportunity Close Date is in prior FY, then
Annual Expected Revenue – Prior FY Revenue * Probability. Else if the
Opportunity Close Date is in current FY, then Annual Expected
Revenue * (Current FY End Date – Close Date) / 365 * Probability.</inlineHelpText>
        <label>Current FY Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Expected_Revenue__c</fullName>
        <description>Enter the amount of revenue this Opportunity will produce in this Fiscal Year</description>
        <inlineHelpText>Enter the amount of revenue this Opportunity will produce in this Fiscal Year</inlineHelpText>
        <label>Current Fiscal Year Expected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Pack_Test_End_Date__c</fullName>
        <label>Customer Pack Test End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Pack_Test_Outcome__c</fullName>
        <label>Customer Pack Test Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Pack_Test_Stage__c</fullName>
        <label>Customer Pack Test Stage</label>
        <picklist>
            <picklistValues>
                <fullName>3 months</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 months</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Customer_Pack_Test_Start_Date__c</fullName>
        <label>Customer Pack Test Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked when a customer quote has been submitted to the customer.</description>
        <label>Customer Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Seup_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When an opportunity is closed for a new account, this field is used to send a message to a contact in Finance to setup the new account.</description>
        <label>Customer Setup Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Testing_End_Date__c</fullName>
        <description>End of Customers testing period.</description>
        <label>Customer Testing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Testing_Estimated_Complete_Date__c</fullName>
        <description>The date the sales rep/account rep anticipates the testing to be complete.</description>
        <label>Customer Testing Estimated Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Testing_Start_Date__c</fullName>
        <label>Customer Testing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DPR_Number__c</fullName>
        <description>For Coil Projects process</description>
        <label>DPR Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_B_Credit_Request__c</fullName>
        <description>Determine if a lead is worth pursuing</description>
        <inlineHelpText>Click Submitted or Received to identify the status of a D&amp;B Credit Request.</inlineHelpText>
        <label>D&amp;B Credit Request</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Submiitted_to_Director__c</fullName>
        <description>Date that the &apos;Request Director Approval&apos; checkbox is set to true</description>
        <label>Date Submiitted to Director</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_to_Manager__c</fullName>
        <description>The date the request manager approval button is set to true</description>
        <label>Date Submitted to Manager</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The second level approver if the users manager is on vacation or wants a second approver on the record.</description>
        <label>Delegated Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DelegatedApproverOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Distributor for the existing account.</description>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distributor</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EPS_Mentor__c</fullName>
        <label>EPS Mentor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_or_New__c</fullName>
        <description>Indicate if this is an existing or new product.</description>
        <inlineHelpText>Does this product already exist? Can we customize an existing product or is this something that&apos;s never been made before?</inlineHelpText>
        <label>Existing or New?</label>
        <picklist>
            <picklistValues>
                <fullName>Existing Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FCN_Approval_Date__c</fullName>
        <inlineHelpText>Actual approval date</inlineHelpText>
        <label>FCN Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCN_Estd_Approval_Date__c</fullName>
        <label>FCN Estimated Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCN_Number__c</fullName>
        <inlineHelpText>Enter 4 digit FCN number</inlineHelpText>
        <label>FCN Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FCN_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if YES</inlineHelpText>
        <label>FCN Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCN_Submit_Date__c</fullName>
        <label>FCN Submit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financial_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financial Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Opportunity Closed Date will autopopulate the respective Fiscal Period the business is projected to be closed.</description>
        <inlineHelpText>CALCULATED: Valspar Fiscal Period based on Close Date and Valspar entity
the Opportunity Owner belongs--e.g. North American Opportunity
Owners use the 4-4-5 fiscal calendar or International for monthly fiscal
calendar.</inlineHelpText>
        <label>Fiscal Period</label>
        <referenceTo>Fiscal_Period__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Food_Contact_Approvals__c</fullName>
        <inlineHelpText>Choose all that apply for this Opportunity</inlineHelpText>
        <label>Food Contact Approvals Req&apos;d?</label>
        <picklist>
            <picklistValues>
                <fullName>FDA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EFSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Geo_Region__c</fullName>
        <description>For Consumer Ace</description>
        <label>Geo Region</label>
        <picklist>
            <controllingField>Business_Unit__c</controllingField>
            <picklistValues>
                <fullName>CENTRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NORTH EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOUTH EAST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China West/Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overseas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Global_Region__c</fullName>
        <label>Global Region</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEAI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Margin__c</fullName>
        <label>Gross Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>In_Year_New_Business_Revenue__c</fullName>
        <label>In Year New Business Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Internal_Test_Estimated_Complete_Date__c</fullName>
        <label>Internal Test Estimated Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <description>Consumer sales -- One time or recurring</description>
        <inlineHelpText>One-time: All revenue will be realized at once; Recurring: Revenue will be earned throughout the year</inlineHelpText>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>One-Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LWR_Approval_Date__c</fullName>
        <label>LWR Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LWR_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LWR Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LWR_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LWR Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LWR_Complete_Date__c</fullName>
        <label>LWR Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LWR_Description__c</fullName>
        <description>Valtrak LWR Item Title synched over for the Opps LWR</description>
        <inlineHelpText>Valtrak Item Titled for this Opportunity</inlineHelpText>
        <label>LWR Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LWR_Details__c</fullName>
        <description>LWR Details from Valtrak.  Will update each time a LWR record is saved in Valtrak</description>
        <inlineHelpText>LWR Details from Valtrak.  Will update each time a LWR record is saved in Valtrak.</inlineHelpText>
        <label>LWR Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LWR_Number__c</fullName>
        <description>Enter the Lab Work Request Number here.</description>
        <inlineHelpText>Enter the Lab Work Request Number here.</inlineHelpText>
        <label>LWR Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LWR_Results_Summary__c</fullName>
        <description>April 2014 - V LWR Results Summary pulled from Valtrack</description>
        <label>LWR Results Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LWR_Short_Desc_Title__c</fullName>
        <description>April 2014 - Short Desc/Title pulled from Valtrack for LWRs</description>
        <label>LWR Short Desc/Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LWR_Status__c</fullName>
        <description>LWR Status from Valtrak.  Updated each time a LWR is saved in Valtrak</description>
        <inlineHelpText>LWR Status from Valtrak.  Updated each time a LWR is saved in Valtrak</inlineHelpText>
        <label>LWR Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lab_Work_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request and execute the product customizations required to service this opportunity.</description>
        <inlineHelpText>Request and execute the product customizations required to service this opportunity. Indicate if this is necessary through a Lab Request here.</inlineHelpText>
        <label>Lab Work Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Line_Trial_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Trial Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Line_Trial_Approved_Date__c</fullName>
        <label>Line Trial Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Trial_Notes__c</fullName>
        <label>Line Trial Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Line_Trial_Start_Date__c</fullName>
        <label>Line Trial Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Line_Trials__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicate if Line Trials have been completed.</description>
        <inlineHelpText>Indicate if Line Trials have been completed.</inlineHelpText>
        <label>Line Trials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ManagedOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>